--- a/webroot/readme.html
+++ b/webroot/readme.html
@@ -456,7 +456,7 @@
 							<UL><LI>The password specified is incorrect or not MD5'd</LI></UL>
 						</LI>
 						<LI>%Field% (%Value%) is not a valid %Type%
-							<UL>The value specied for the field, is not a valid value for that field's <SPAN ONCLICK="expand('theheader/post-data');">data type</SPAN></UL>
+							<UL><LI>The value specied for the field, is not a valid value for that field's <SPAN ONCLICK="expand('theheader/post-data');">data type</SPAN></LI></UL>
 						</LI>
 						<LI>Not a valid client ID
 							<UL><LI>The clientid was either not specified or not found in the database</LI></UL>
