--- a/webroot/readme.html
+++ b/webroot/readme.html
@@ -439,7 +439,7 @@
 							<UL><LI>A string containing at least 1 number</LI></UL>
 						</LI>
 						<LI ID="base64">Base64-file
-							<UL><LI>The file encoded in Base64 format, including "data:image/[FILE EXTENSION];base64," at the beginning of it</LI></UL>
+							<UL><LI>"data:image/[FILE EXTENSION];base64," followed by the file encoded in Base64 format</LI></UL>
 						</LI>
 						<LI id="csv">CSV
 							<UL><LI>A comma delimeted list of numbers</LI></UL>
