--- a/webroot/readme.html
+++ b/webroot/readme.html
@@ -436,7 +436,7 @@
 							</UL>
 						</LI>
 						<LI ID="phone">Phone number
-							<UL><LI>A string containing at least 1 number</LI></UL>
+							<UL><LI>A string containing at least 1 number. Anything non-numeric (except + symbols) will be removed</LI></UL>
 						</LI>
 						<LI ID="base64">Base64-file
 							<UL><LI>"data:image/[FILE EXTENSION];base64," followed by the file encoded in Base64 format</LI></UL>
